# UIBK_PS_ParSys

./: .gitignore  README.md  gmon_O0.out  gmon_O3.out  main.cpp
ex01/: CMakeLists.txt  gmon_O0.out  main.cpp
ex02/: CI_100_tri.txt  CI_150.txt  CI_200_tri.txt  CI_250.txt  CI_300_tri.txt  CI_350.txt  CI_400_tri.txt  CI_450.txt  CI_50.txt  CI_500.txt  CM_100_tri.txt  CM_150.txt  CM_200_tri.txt  CM_250.txt  CM_300_tri.txt  CM_350.txt  CM_400_tri.txt  CM_450.txt  CM_50.txt  CM_500.txt  ND_100.txt  ND_150.txt  ND_200.txt  ND_250.txt  ND_300.txt  ND_350.txt  ND_400.txt  ND_450.txt  ND_50.txt  ND_500.txt  mmul  mmul_tri.cpp  script.sh
ex03/: 03_mmul_cpp_dynamic.cpp
ex04/Merge_Sort/: main.c  main_par.c
ex04/Monte_Carlo/: CMakeLists.txt  a.out  main.cpp  main.h
ex04/Monte_Carlo/tests/: gtest.cpp
ex04/Monte_Carlo_parallel/: CMakeLists.txt  UniformDistribution.h  a.out  main.cpp
ex04/NQueens/: nqueens  nqueens.cpp  nqueens_documentation.txt  nqueens_parallel  nqueens_parallel.cpp
ex05/Monte_Carlo_parallel/: CMakeLists.txt  eval.py  main.cpp  main.h  monte_carlo_data.txt
ex05/NQueens/: eval.py  nqueens_data.txt  nqueens_optimized_parallel.cpp  nqueens_optimized_sequential.cpp
ex05/ParallelMergeSort/: CMakeLists.txt  MerseSort.cpp  main.cpp  main.h
ex06/: CMakeLists.txt  avl_parallel.cpp  avl_v2.cpp  main.cpp
ex07/: stencil.cpp  stencil_parallel.cpp
ex08/MPI_Monte_Carlo/: pi.cpp
ex08/ex02/: stencil_optimized_par.cpp  stencil_optimized_par_v2.cpp  stencil_optimized_seq.cpp  stencil_optimized_seq_v2.cpp
ex10/mmul/: mmul.cpp  mmul_test
